# Studio-management-system

./: CMakeLists.txt
include/: Action.h  Customer.h  Studio.h  Trainer.h  Workout.h
src/: Action.cpp  Customer.cpp  Studio.cpp  Trainer.cpp  Workout.cpp  main.cpp
